--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,8 +1,8 @@
 @import "vars";
 
 .search-results {
-  .card-body {
-    padding: 30px;
+  .pagination {
+    margin-top: 25px;
   }
   .result {
     margin-bottom: 25px;
