--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -1,13 +1,15 @@
 <div class="row">
   <%= render "/settings/menu" %>
   <div class="col-md-10">
-    <div class="card">
+    <div class="card card-lg">
       <div class="card-body">
         <div class="card-title clearfix">
           管理的应用列表
-          <%= link_to "注册新应用", new_oauth_application_path, class: 'btn btn-primary float-right' %>
+          <div class="actions">
+            <%= link_to "注册新应用", new_oauth_application_path, class: 'btn btn-primary btn-sm' %>
+          </div>
         </div>
-        <table class="table table-bordered table-striped table-condensed">
+        <table class="table table-bordered table-striped">
           <thead>
             <tr>
               <th><%= t('.name') %></th>
@@ -34,7 +36,7 @@
         </table>
       </div>
     </div>
-    <div class="card">
+    <div class="card card-lg">
       <div class="card-body">
         <div class="card-title clearfix">
           <div>已授权的应用</div>
