--- a/app/views/notifications/notifications/index.html.erb
+++ b/app/views/notifications/notifications/index.html.erb
@@ -1,4 +1,4 @@
-<div class="notifications card">
+<div class="notifications card card-lg">
   <div class="card-body">
     <div class="card-title hide-ios clearfix">
       <%= t('notifications.all_notifications') %>
