--- a/app/views/shared/_captcha_input.html.erb
+++ b/app/views/shared/_captcha_input.html.erb
@@ -1,6 +1,10 @@
 <% if Setting.use_recaptcha? %>
   <%= recaptcha_tags site_key: Setting.recaptcha_key %>
 <% else %>
-  <%= rucaptcha_input_tag(class: 'form-control input-lg', placeholder: t('common.captcha')) %>
-  <span class="input-group-addon input-group-captcha"><a class="rucaptcha-image-box" href="#"><%= rucaptcha_image_tag %></a></span>
+  <%= rucaptcha_input_tag(class: 'form-control', placeholder: t('common.captcha')) %>
+  <div class="input-group-append input-group-captcha">
+    <span class="input-group-text" style="padding: 3px 4px; background: #fff;">
+      <a class="rucaptcha-image-box" href="#"><%= rucaptcha_image_tag %></a>
+    </span>
+  </div>
 <% end %>
