--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,5 +1,5 @@
 <% title_tag t('topics.new_topic') %>
-<div class="card">
+<div class="card card-lg">
   <div class="card-body">
     <div class="card-title hide-ios">
       <%= t('topics.new_topic') %>
