--- a/app/views/admin/site_configs/index.html.erb
+++ b/app/views/admin/site_configs/index.html.erb
@@ -5,7 +5,14 @@
 <ul class="list-group">
   <% Setting.editable_keys.each do |key| %>
     <li class="list-group-item">
-      <div class="mb-1"><%= icon_tag("gear") %><a href="<%= edit_admin_site_config_path(key) %>" style="font-size: 15px; color: #2162D2;"><%= key %></a></div>
+      <div class="mb-1">
+        <%= icon_tag("gear") %><a href="<%= edit_admin_site_config_path(key) %>" style="font-size: 15px; color: #2162D2;"><%= key %></a>
+        <% if key == "timezone" %>
+          <div class="badge">
+            当前时区: <%= Time.zone %>
+          </div>
+        <% end %>
+      </div>
       <div class="text-gray"><%= t("setting.#{key}") %></div>
     </li>
   <% end %>
