--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -45,7 +45,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <p>Powered by <a href="https://github.com/ruby-china/homeland/releases">Homeland <%= Homeland.version %></a></p>
+        <p>Powered by <a href="https://github.com/ruby-china/homeland/blob/master/CHANGELOG.md">Homeland <%= Homeland.version %></a></p>
         <p class="suggest">使用 <a href="http://www.mozillaonline.com/" target="_blank" rel="nofollow">Firefox</a> 或 <a href="http://www.google.com/chrome" target="_blank" rel="nofollow">Chrome</a> 浏览访问本站将会获得更佳的视觉体验.</p>
       </div>
     </footer>
