--- a/app/views/admin/replies/edit.html.erb
+++ b/app/views/admin/replies/edit.html.erb
@@ -1,5 +1,12 @@
 <% content_for :sitemap do %>
   <a href="<%= admin_replies_path %>"><%= t('admin.menu.replies') %></a> <i class="fa fa-angle-right"></i> <span class="current"><%= t("common.edit") %></span>
 <% end %>
-<h1><%= t("common.edit") %><%= t('admin.menu.replies') %></h1>
+<div class="flex aib">
+  <h1><%= t("common.edit") %><%= t('admin.menu.replies') %></h1>
+
+  <div class="ml-2">
+    <%= link_to '返回', admin_replies_path, class: "btn btn-default btn-sm" %>
+  </div>
+</div>
+
 <%= render 'form' %>
