--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -1,7 +1,11 @@
 <% content_for :sitemap do %>
   <a href="<%= admin_topics_path %>"><%= t("admin.menu.topics")%></a> <i class="fa fa-angle-right"></i> <span class="current"><%= t("common.edit")%></span>
 <% end %>
-<h1><%= t("common.edit")%><%= t("admin.menu.topics") %></h1>
+
+<div class="flex aib">
+  <h1><%= t("common.edit")%><%= t("admin.menu.topics") %></h1>
+  <%= link_to '返回', admin_topics_path, class: "btn btn-default btn-sm ml-2" %>
+</div>
 
 <%= render 'form' %>
 
