--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
 </div>
 <% end %>
 
+<% if !@excellent_topics.blank? %>
 <div class="home_suggest_topics card">
-  <div class="card-header hidden-mobile">社区精华帖</div>
   <div class="card-body topics row">
     <% cache(["home_suggest_topics", @excellent_topics]) do %>
     <%
@@ -24,6 +24,7 @@
     <%= link_to "查看更多精华帖...", excellent_topics_path %>
   </div>
 </div>
+<% end %>
 
 <% if !mobile? %>
   <%= render "/shared/index_sections" %>
