--- a/app/views/shared/_hot_locations.html.erb
+++ b/app/views/shared/_hot_locations.html.erb
@@ -1,10 +1,11 @@
 <% cache(["index-locations",Time.now.strftime("%Y-%m-%d")]) do %>
-  <div class="index-locations card">
-    <div class="card-header"><%=t("common.hot_locations")%></div>
-    <div class="card-body location-list" style="text-align:center;">
-      <% Location.hot.limit(12).each do |item| %>
-        <span class="name"><%= location_name_tag(item) %></span>
-      <% end %>
+  <% if !Location.hot.blank? %>
+    <div class="index-locations card">
+      <div class="card-body location-list" style="text-align:center;">
+        <% Location.hot.limit(12).each do |item| %>
+          <span class="name"><%= location_name_tag(item) %></span>
+        <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
