--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= Setting.app_name %> - 控制台</title>
-    <%= stylesheet_link_tag "admin" %>
+    <%= stylesheet_pack_tag "admin" %>
     <%= javascript_include_tag "app" %>
     <%= csrf_meta_tag %>
   </head>
