--- a/app/views/layouts/simple.html.erb
+++ b/app/views/layouts/simple.html.erb
@@ -6,8 +6,8 @@
   <title><%= content_for?(:title) ? yield(:title) : Setting.app_name %></title>
   <meta name="apple-mobile-web-app-capable" content="no">
   <meta content='True' name='HandheldFriendly' />
-  <%= stylesheet_link_tag "front" %>
-  <%= javascript_include_tag "app" %>
+  <%= stylesheet_pack_tag "front" %>
+  <%= javascript_pack_tag "application" %>
   <%= csrf_meta_tag %>
   <%= raw Setting.custom_head_html %>
 </head>
