--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -37,7 +37,8 @@
               </div>
 
               <div class="form-group">
-                <%= f.text_area :bio, class: "form-control" %>
+                <label class="control-label">自我介绍</label>
+                <%= f.text_area :bio, class: "form-control", rows: 6 %>
               </div>
             </div>
             <div class="col-sm-3">
