Split webpack chunks

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= Setting.app_name %> - 控制台</title>
     <%= stylesheet_pack_tag "admin" %>
-    <%= javascript_pack_tag "application" %>
+    <%= javascript_packs_with_chunks_tag "application" %>
     <%= csrf_meta_tag %>
   </head>
   <body>
